--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
           <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="#">Contact</a></li>
         </ul>
+        <div class="avatar pull-left" style="background-image: url(images/rob.jpg); margin-right: 10px;"></div>
         <h3 class="text-muted">grenade</h3>
       </div>
 
@@ -79,6 +80,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-markdown-directive/markdown.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -86,6 +88,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/experience.js"></script>
         <!-- endbuild -->
 </body>
 </html>
