education and objective

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="avatar pull-left" style="background-image: url(images/rob.jpg); margin-right: 10px;"></div>
-          <a class="navbar-brand" ng-href="#/">Rob Thijssen - CV</a>
+          <a class="navbar-brand" ng-href="#/">Rob Thijssen</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right" ng-controller="NavCtrl">
