--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,9 @@
             <li ng-class="{active:isActive('contact')}">
               <a ng-href="#/contact">Contact</a>
             </li>
+            <li ng-class="{active:isActive('home')}">
+              <a ng-href="#/">tldr;</a>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
