--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
               <a ng-href="#/contact">Contact</a>
             </li>
             <li ng-class="{active:isActive('home')}">
-              <a ng-href="#/">tldr;</a>
+              <a ng-href="#/">tl;dr</a>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
