--- a/app/index.html
+++ b/app/index.html
@@ -30,24 +30,24 @@
             <span class="icon-bar"></span>
           </button>
           <div class="avatar pull-left" style="background-image: url(images/rob.jpg); margin-right: 10px;"></div>
-          <a class="navbar-brand" ng-href="#/">Rob Thijssen</a>
+          <a class="navbar-brand" href="/">Rob Thijssen</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right" ng-controller="NavCtrl">
             <li ng-class="{active:isActive('objective')}">
-              <a ng-href="#/objective">Objective</a>
+              <a ng-href="#!/objective">Objective</a>
             </li>
             <li ng-class="{active:isActive('experience')}">
-              <a ng-href="#/experience">Experience</a>
+              <a ng-href="#!/experience">Experience</a>
             </li>
             <li ng-class="{active:isActive('education')}">
-              <a ng-href="#/education">Education</a>
+              <a ng-href="#!/education">Education</a>
             </li>
             <li ng-class="{active:isActive('contact')}">
-              <a ng-href="#/contact">Contact</a>
+              <a ng-href="#!/contact">Contact</a>
             </li>
             <li ng-class="{active:isActive('home')}">
-              <a ng-href="#/">tl;dr</a>
+              <a ng-href="#!/">tl;dr</a>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -86,6 +86,8 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/json3/lib/json3.js"></script>
+    <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -97,6 +99,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/showdown/src/showdown.js"></script>
     <script src="bower_components/angular-markdown-directive/markdown.js"></script>
+    <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
